修改归档页面

--- a/assets/styles/components/archives.less
+++ b/assets/styles/components/archives.less
@@ -10,7 +10,7 @@
     font-size: 24px;
     font-weight: bold;
     margin-top: 16px;
-    color: @dark-main-color;
+    //color: @dark-main-color;
   }
   .post {
 
@@ -19,9 +19,12 @@
       font-size: 16px;
       padding: 10px 0 10px 40px;
       small {
-        font-size: 80%;
+        font-size: 70%;
       }
     }
+  }
+  .post-info{
+    font-size: 12px;
   }
 }
 
