--- a/assets/styles/components/post.less
+++ b/assets/styles/components/post.less
@@ -2,6 +2,7 @@
   flex: 1;
   margin: auto 10px;
   .post {
+    word-wrap: break-word;
     background-color: #fff;
     padding:0 20px 32px 20px;
     box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
@@ -36,6 +37,7 @@
       //border-bottom : 1px dashed #777777;
     }
     .post-content {
+      
       a {
         color: @main-color;
         transition: all 0.3s;
@@ -57,6 +59,7 @@
         margin-bottom: 24px;
         font-size: 16px;
         letter-spacing: 1.0382;
+        word-wrap: break-word;
       }
       
       // p, li {
@@ -145,7 +148,7 @@
   background-color: #fff;
  // padding:0 20px 32px 20px;
   box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
- // margin-bottom: 20px;
+  margin:auto 10px;
   .next {
     margin-bottom: 24px;
     color: @oc-gray-8;
