--- a/templates/includes/head.ejs
+++ b/templates/includes/head.ejs
@@ -10,7 +10,7 @@
 <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
 <script src="/media/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
-<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<!-- <script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script> -->
 <script src="https://cdn.bootcss.com/moment.js/2.23.0/moment.min.js"></script>
 
 <link rel="shortcut icon" href="<%= themeConfig.domain %>/favicon.ico?v=<%= site.utils.now %>">
