修改为圆角，修改pagination

--- a/assets/styles/components/archives.less
+++ b/assets/styles/components/archives.less
@@ -5,6 +5,7 @@
   box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
   margin-bottom: 20px;
   margin: auto 10px;
+  border-radius: 5px;
   flex: 1;
   .year {
     font-size: 24px;
