--- a/templates/includes/post-list.ejs
+++ b/templates/includes/post-list.ejs
@@ -28,14 +28,13 @@
 		<% } %>
 		
 		<div class="post-abstract" >
-
 			<img src="" class="myClass1" alt="Not Working!" width="220" height="120" style=" border-radius: 5px; margin-right:5px;float: left;" /> 
 			<%- post.description %>
 		</div>
 		
 		<div class="post-button text-left">
 			<a href="<%= post.link %>" rel="contents">
-				More »
+				阅读全文 »
 			</a>
 		</div>
 		
