--- a/assets/styles/components/home.less
+++ b/assets/styles/components/home.less
@@ -6,6 +6,7 @@
     padding:0 20px 32px 20px;
     box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
     margin-bottom: 20px;
+    border-radius: 5px;
     .post-title {
       color: #555555;
       font-size: 18px;
