--- a/assets/styles/components/post.less
+++ b/assets/styles/components/post.less
@@ -7,6 +7,7 @@
     padding:0 20px 32px 20px;
     box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
     margin-bottom: 20px;
+    border-radius: 5px;
     .post-feature-image {
       //padding-top: 56.25%;
       background-size: cover;
