--- a/assets/styles/components/sidebar.less
+++ b/assets/styles/components/sidebar.less
@@ -4,6 +4,7 @@
     padding:5px 10px 32px 10px;
     box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
     margin: 0 10px 20px 10px;
+    border-radius: 5px;
 }
 .me-sidebar-title
 {
