--- a/assets/styles/components/tag.less
+++ b/assets/styles/components/tag.less
@@ -3,6 +3,7 @@
   padding:15px 20px;
   box-shadow:0 5px 5px 0 rgba(104, 103, 103, 0.1);
   margin: 0 10px 10px 10px;
+  border-radius: 5px;
   .title {
     text-align: center;
     font-size: 18px;
