--- a/templates/includes/sitebar.ejs
+++ b/templates/includes/sitebar.ejs
@@ -8,7 +8,7 @@
         <p class="me-site-description"><%= themeConfig.siteDescription %></p>
         <div class="post-button text-left">
             <a  href="/" rel="contents">
-              阅读全文 »
+              了解更多 »
             </a>
           </div>
     </div>
