1、添加四种Header配色 2、添加置顶 3、修改为圆角 4、修改字体为微软雅黑light

--- a/assets/styles/components/home.less
+++ b/assets/styles/components/home.less
@@ -94,6 +94,14 @@
 .post-button{
   color:#777777;
 }
+.me-top-tick{
+  padding: 3px 10px;
+  font-size: 12px;
+  border-radius: 3px;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
 
 @media (max-width: 600px) {
   .post-container {
@@ -110,5 +118,9 @@
         padding-top: 56.25%;
       }
     }
+  }
+  .media-hide
+  {
+    display: none;
   }
 }
