--- a/assets/styles/main.less
+++ b/assets/styles/main.less
@@ -37,7 +37,7 @@ a {
 body, div, a, p, ul, li, ol, h1, h2, h3, h4, h5, h6, table, tr, td {
   font-weight: normal;
   box-sizing: border-box;
-  font-family: "Segoe UI","华为细黑","黑体","宋体",sans-serif;
+  font-family: "Segoe UI","Microsoft YaHei UI Light","黑体","宋体",sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -68,3 +68,4 @@ body, div, a, p, ul, li, ol, h1, h2, h3, h4, h5, h6, table, tr, td {
 @import "./components/sidebar.less"; // add by zhangpeng
 //@import "./lib/github.less";
 @import "./lib/katex.less";
+@import "./components/color-style.less";
