--- a/templates/includes/post-list.ejs
+++ b/templates/includes/post-list.ejs
@@ -1,9 +1,21 @@
-<div class="post-container">
+<div class=" <%-site.customConfig.header_color%>">
+<div class="post-container ">
 	<% posts.forEach(function(post) { %>
 	<article class="post">
+		<% if (post.isTop) { %>
+			
 		<a href="<%= post.link %>">
-			<h2 class="post-title"><%= post.title %></h2>
+			
+			<div class="post-title">
+				<span class="me-top-tick">置顶</span>
+				<%= post.title %>
+			</div> 
 		</a>
+		<% }else { %>
+			<a href="<%= post.link %>">
+				<h2 class="post-title"><%= post.title %></h2>
+			</a>
+		<% }%>
 		<div class="post-info">
 			<time class="post-time glyphicon glyphicon-calendar">
 				发布于<%= post.dateFormat %> |
@@ -14,10 +26,10 @@
 				<%= tag.name %> |
 			</a>
 			<% }); %>
-			<time class="post-time glyphicon glyphicon-dashboard">
+			<time class="post-time glyphicon glyphicon-dashboard media-hide">
 				<%= post.stats.minutes %>分钟|
 			</time>
-			<time class="post-time glyphicon glyphicon-pencil">
+			<time class="post-time glyphicon glyphicon-pencil media-hide">
 				<%= post.stats.words %>字数
 			</time>
 		</div>
@@ -26,30 +38,31 @@
 		<a href="<%= post.link %>" class="post-feature-image" style="background-image: url('<%= post.feature %>')">
 		</a>
 		<% } %>
-		
-		<div class="post-abstract" >
-			<img src="" class="myClass1" alt="Not Working!" width="220" height="120" style=" border-radius: 5px; margin-right:5px;float: left;" /> 
+
+		<div class="post-abstract">
+			<img src="" class="myClass1" alt="Not Working!" width="220" height="120"
+				style=" border-radius: 5px; margin-right:5px;float: left;" />
 			<%- post.description %>
 		</div>
-		
+
 		<div class="post-button text-left">
 			<a href="<%= post.link %>" rel="contents">
 				阅读全文 »
 			</a>
 		</div>
-		
+
 	</article>
-	
+
 	<% }); %>
 </div>
-
+</div>
 
 <script>
 	var imgs = document.getElementsByClassName('myClass1');
-	
+
 	for (var i = 0; i < imgs.length; i++) {
-	  var num = Math.floor(Math.random() * 33 + 1);
-	  imgs[i].src = 'https://img.memory6181.com/random/'+num+'.jpeg';
-	  imgs[i].alt = imgs[i].src;
+		var num = Math.floor(Math.random() * 33 + 1);
+		imgs[i].src = 'https://img.memory6181.com/random/' + num + '.jpeg';
+		imgs[i].alt = imgs[i].src;
 	}
 </script>
