--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -10,6 +10,7 @@
 		<div class="row">
 			<div class="col-sm-8 blog-main">
 				<div class="main-content">
+					<div class=" <%-site.customConfig.header_color%>"></div>
 					<div class="post-detail">
 						<article class="post">
 							<h2 class="post-title">
@@ -83,12 +84,12 @@
 
 					<%- include('./includes/footer') %>
 				</div>
+			</div>
 			</div><!-- /.blog-main -->
 			<%- include('./includes/sitebar') %>
 
 		</div>
 	</div>
-
 	<!--载入js，在</body>之前插入即可-->
 	<!--Leancloud 操作库:-->
 	<script src="//cdn1.lncld.net/static/js/3.0.4/av-min.js"></script>
