--- a/templates/includes/header.ejs
+++ b/templates/includes/header.ejs
@@ -1,10 +1,9 @@
 <!-- 百度推送 -->
 <%-site.customConfig.baidutijiao%>
 
-
-
 <!-- header -->
-<nav class="navbar <%-site.customConfig.header_color%>" role="navigation">
+<div class=" <%-site.customConfig.header_color%>">
+<nav class="navbar navbar-default" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
@@ -13,7 +12,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/"><%= themeConfig.siteName %></a>
+			<a class="navbar-brand " href="/"><%= themeConfig.siteName %></a>
 		</div>
 		<div class="collapse navbar-collapse" id="example-navbar-collapse">
 			<ul class="nav navbar-nav">
@@ -38,5 +37,6 @@
 		</form> -->
 	</div>
 </nav>
+</div>
 
 
