--- a/assets/styles/components/home.less
+++ b/assets/styles/components/home.less
@@ -8,15 +8,12 @@
     margin-bottom: 20px;
     border-radius: 5px;
     .post-title {
-      color: #555555;
+      //color: #555555;
       font-size: 18px;
       text-align: left;
       padding: 18px 0 10px 0;
       font-weight: 600;
       margin: 0 auto;
-    }
-    .post-title:hover {
-      color: #333
     }
   
     .post-info {
@@ -91,9 +88,10 @@
     float: right;
   }
 }
-.post-button{
-  color:#777777;
-}
+ .post-button{
+    font-size: 14px;
+
+  }
 .me-top-tick{
   padding: 3px 10px;
   font-size: 12px;
