--- a/templates/includes/post-list-archives.ejs
+++ b/templates/includes/post-list-archives.ejs
@@ -11,7 +11,7 @@
             <h2 class="post-title">
               <%= post.title %>
               
-              <small style="float: right;" class="glyphicon glyphicon-calendar"><%= post.dateFormat %></small>
+              <small style="float: right;" class="glyphicon glyphicon-calendar media-hide"><%= post.dateFormat %></small>
               <hr class="me-sidebar-line"> <!-- 分割线 -->
             </h2>
           </a>
