--- a/templates/includes/post-list.ejs
+++ b/templates/includes/post-list.ejs
@@ -4,16 +4,16 @@
 	<article class="post">
 		<% if (post.isTop) { %>
 			
-		<a href="<%= post.link %>">
+		<a href="<%= post.link %>" style="text-decoration: none">
 			
-			<div class="post-title">
+			<div class="post-title post-link">
 				<span class="me-top-tick">置顶</span>
 				<%= post.title %>
 			</div> 
 		</a>
 		<% }else { %>
-			<a href="<%= post.link %>">
-				<h2 class="post-title"><%= post.title %></h2>
+			<a href="<%= post.link %>" style="text-decoration: none">
+				<h2 class="post-title post-link"><%= post.title %></h2>
 			</a>
 		<% }%>
 		<div class="post-info">
@@ -22,12 +22,12 @@
 			</time>
 			<% post.tags.forEach(function(tag) { %>
 			分类于
-			<a href="<%= tag.link %>" class="post-tag 	glyphicon glyphicon-link">
-				<%= tag.name %> |
+			<a href="<%= tag.link %>" class="post-tag post-link glyphicon glyphicon-link" style="text-decoration: none">
+				<%= tag.name %>
 			</a>
 			<% }); %>
 			<time class="post-time glyphicon glyphicon-dashboard media-hide">
-				<%= post.stats.minutes %>分钟|
+				| <%= post.stats.minutes %>分钟|
 			</time>
 			<time class="post-time glyphicon glyphicon-pencil media-hide">
 				<%= post.stats.words %>字数
@@ -35,7 +35,7 @@
 		</div>
 		<hr class="me-sidebar-line">
 		<% if (themeConfig.showFeatureImage && post.feature) { %>
-		<a href="<%= post.link %>" class="post-feature-image" style="background-image: url('<%= post.feature %>')">
+		<a href="<%= post.link %>" class="post-feature-image" style="background-image: url('<%= post.feature %>'); text-decoration: none">
 		</a>
 		<% } %>
 
@@ -45,9 +45,9 @@
 			<%- post.description %>
 		</div>
 
-		<div class="post-button text-left">
-			<a href="<%= post.link %>" rel="contents">
-				阅读全文 »
+		<div class="post-button text-left ">
+			<a href="<%= post.link %>" rel="contents" style="text-decoration:none">
+				<span >阅读全文 »</span>
 			</a>
 		</div>
 
