--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -10,7 +10,7 @@
 		<div class="row">
 			<div class="col-sm-8 blog-main">
 				<div class="main-content">
-					<div class=" <%-site.customConfig.header_color%>"></div>
+					<div class=" <%-site.customConfig.header_color%>">
 					<div class="post-detail">
 						<article class="post">
 							<h2 class="post-title">
